--- a/MapKitDemo/Info.plist
+++ b/MapKitDemo/Info.plist
@@ -20,6 +20,12 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+       <string>Your location is required for xyz benefits for you</string>
+       <key>NSLocationWhenInUseUsageDescription</key>
+       <string>Your location is required for xyz benefits for you</string>
+       <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+       <string>Your location is required for xyz benefits for you</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
